# app-rs-ts

./: .eslintignore  .eslintrc.cjs  LICENSE  README.md  bun.lockb  eslint.config.js  package.json  postcss.config.js  svelte.config.js  tailwind.config.js  vite.config.js
.github/: auto_assign.yml
.github/workflows/: auto_assign.yml  bun_dep.yml  main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/ui/: app.less  base.less
src/routes/: +page.svelte
